--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
   <body>
+    <h2>Calculator</h2>
     <div class="container"></div>
     <script src="app.js"></script>
   </body>
