--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
   </head>
   <body>
     <h2>Calculator</h2>
-    <div class="container"></div>
+    <div class="container">
+      <div class="nums">
+        <button>9</button>
+        <button>8</button>
+        <button>7</button>
+        <button>6</button>
+        <button>5</button>
+        <button>4</button>
+        <button>3</button>
+        <button>2</button>
+        <button>1</button>
+        <button>0</button>
+      </div>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
