--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
-  <body>
+  <div>
     <h2>Calculator</h2>
     <div class="container">
       <div class="nums">
+        <div class="row1">
         <button>9</button>
         <button>8</button>
-        <button>7</button>
+        <button>7</button></div>
+        <div class="row2">
         <button>6</button>
         <button>5</button>
-        <button>4</button>
+        <button>4</button></div>
+        <div class="row3">
         <button>3</button>
         <button>2</button>
-        <button>1</button>
+        <button>1</button></div>
         <button>0</button>
       </div>
     </div>
