--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <button>2</button>
         <button>1</button></div>
         <button>0</button>
+        <button>Clear</button>
       </div>
     </div>
     <script src="app.js"></script>
