--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <button>0</button>
         <button>Clear</button>
       </div>
+      <div class="signs"></div>
     </div>
     <script src="app.js"></script>
   </body>
