--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <button>0</button>
         <button>Clear</button>
       </div>
-      <div class="signs"></div>
+      <div class="signs">
+        <button>+</button>
+      </div>
     </div>
     <script src="app.js"></script>
   </body>
