--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       </div>
       <div class="signs">
         <button>+</button>
+        <button>-</button>
       </div>
     </div>
     <script src="app.js"></script>
