--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div class="signs">
         <button>+</button>
         <button>-</button>
+        <button>*</button>
       </div>
     </div>
     <script src="app.js"></script>
