--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <button>+</button>
         <button>-</button>
         <button>*</button>
+        <button>/</button>
       </div>
     </div>
     <script src="app.js"></script>
