--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <div>
     <h2>Calculator</h2>
     <div class="container">
+      <input type="text">
       <div class="nums">
         <div class="row1">
         <button>9</button>
