--- a/index.html
+++ b/index.html
@@ -12,19 +12,20 @@
       <input type="text" placeholder="123">
       <div class="nums">
         <div class="row1">
-        <button>9</button>
-        <button>8</button>
-        <button>7</button></div>
+          <input type="button" value="9" placeholder="9">
+          <input type="button" value="8" placeholder="8">
+          <input type="button" value="7" placeholder="7">
+        </div>
         <div class="row2">
-        <button>6</button>
-        <button>5</button>
-        <button>4</button></div>
+          <input type="button" value="6" placeholder="6">
+          <input type="button" value="5" placeholder="5">
+          <input type="button" value="4" placeholder="4"></div>
         <div class="row3">
-        <button>3</button>
-        <button>2</button>
-        <button>1</button></div>
-        <button>0</button>
-        <button>Clear</button>
+          <input type="button" value="3" placeholder="3">
+          <input type="button" value="2" placeholder="2">
+          <input type="button" value="1" placeholder="1"></div>
+          <input type="button" value="0" placeholder="0">
+          <input type="reset"  placeholder="Clear">
         <button>=</button>
       </div>
       <div class="signs">
