--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="signs">
         <button>+</button>
         <button>-</button>
-        <button>*</button>
+        <!-- <button>*</button> -->
         <button>/</button>
         
       </div>
