--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
       <div class="signs">
         <button>+</button>
         <button>-</button>
-        <!-- <button>*</button> -->
+        <button>*</button>
         <button>/</button>
+        <button></button>
         
       </div>
     </div>
