--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <button>-</button>
         <button>*</button>
         <button>/</button>
+        <button>/</button>
+        
         
         </div>
     </div>
