--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <button>-</button>
         <button>*</button>
         <button>/</button>
+        <button>/</button>
       </div>
     </div>
     <script src="app.js"></script>
